src/parser/generated/HTMLParser.js
// Generated from src/parser/grammar/HTMLParser.g4 by ANTLR 4.7.1
// jshint ignore: start
var antlr4 = require('antlr4/index');
var HTMLParserListener = require('./HTMLParserListener').HTMLParserListener;
var grammarFileName = "HTMLParser.g4";



var atn = new antlr4.atn.ATNDeserializer().deserialize(serializedATN);

var decisionsToDFA = atn.decisionToState.map( function(ds, index) { return new antlr4.dfa.DFA(ds, index); });

var sharedContextCache = new antlr4.PredictionContextCache();

var literalNames = [ null, null, null, null, null, null, null, "'<script '", 
                     "'<script>'", "'<style >'", "'<style>'", "'<'" ];

var symbolicNames = [ null, "HTML_COMMENT", "HTML_CONDITIONAL_COMMENT", 
                      "XML_DECLARATION", "CDATA", "DTD", "SEA_WS", "SCRIPT_OPEN", 
                      "SCRIPT_NOATTRS", "STYLE_OPEN", "STYLE_NOATTRS", "TAG_OPEN", 
                      "HTML_TEXT", "SCRIPT_TAG_CLOSE", "SCRIPT_TAG_SLASH_CLOSE", 
                      "SCRIPT_TAG_SLASH", "SCRIPT_TAG_EQUALS", "SCRIPT_TAG_NAME", 
                      "SCRIPT_TAG_WHITESPACE", "STYLE_TAG_CLOSE", "STYLE_TAG_SLASH_CLOSE", 
                      "STYLE_TAG_SLASH", "STYLE_TAG_EQUALS", "STYLE_TAG_NAME", 
                      "STYLE_TAG_WHITESPACE", "TAG_CLOSE", "TAG_SLASH_CLOSE", 
                      "TAG_SLASH", "TAG_EQUALS", "TAG_NAME", "TAG_WHITESPACE", 
                      "SCRIPT_BODY", "STYLE_BODY", "ATTVALUE_VALUE", "ATTRIBUTE" ];

var ruleNames =  [ "htmlDocument", "htmlElements", "htmlElement", "htmlContent", 
                   "htmlAttribute", "htmlScriptAttribute", "htmlStyleAttribute", 
                   "htmlAttributeName", "htmlScriptAttributeName", "htmlStyleAttributeName", 
                   "htmlAttributeValue", "htmlTagName", "htmlChardata", 
                   "htmlMisc", "htmlComment", "xhtmlCDATA", "dtd", "xml", 
                   "script", "style" ];

function HTMLParser (input) {
	antlr4.Parser.call(this, input);
    this._interp = new antlr4.atn.ParserATNSimulator(this, atn, decisionsToDFA, sharedContextCache);
    this.ruleNames = ruleNames;
    this.literalNames = literalNames;
    this.symbolicNames = symbolicNames;
    return this;
}

HTMLParser.prototype = Object.create(antlr4.Parser.prototype);
HTMLParser.prototype.constructor = HTMLParser;

Object.defineProperty(HTMLParser.prototype, "atn", {
	get : function() {
		return atn;
	}
});

HTMLParser.EOF = antlr4.Token.EOF;
HTMLParser.HTML_COMMENT = 1;
HTMLParser.HTML_CONDITIONAL_COMMENT = 2;
HTMLParser.XML_DECLARATION = 3;
HTMLParser.CDATA = 4;
HTMLParser.DTD = 5;
HTMLParser.SEA_WS = 6;
HTMLParser.SCRIPT_OPEN = 7;
HTMLParser.SCRIPT_NOATTRS = 8;
HTMLParser.STYLE_OPEN = 9;
HTMLParser.STYLE_NOATTRS = 10;
HTMLParser.TAG_OPEN = 11;
HTMLParser.HTML_TEXT = 12;
HTMLParser.SCRIPT_TAG_CLOSE = 13;
HTMLParser.SCRIPT_TAG_SLASH_CLOSE = 14;
HTMLParser.SCRIPT_TAG_SLASH = 15;
HTMLParser.SCRIPT_TAG_EQUALS = 16;
HTMLParser.SCRIPT_TAG_NAME = 17;
HTMLParser.SCRIPT_TAG_WHITESPACE = 18;
HTMLParser.STYLE_TAG_CLOSE = 19;
HTMLParser.STYLE_TAG_SLASH_CLOSE = 20;
HTMLParser.STYLE_TAG_SLASH = 21;
HTMLParser.STYLE_TAG_EQUALS = 22;
HTMLParser.STYLE_TAG_NAME = 23;
HTMLParser.STYLE_TAG_WHITESPACE = 24;
HTMLParser.TAG_CLOSE = 25;
HTMLParser.TAG_SLASH_CLOSE = 26;
HTMLParser.TAG_SLASH = 27;
HTMLParser.TAG_EQUALS = 28;
HTMLParser.TAG_NAME = 29;
HTMLParser.TAG_WHITESPACE = 30;
HTMLParser.SCRIPT_BODY = 31;
HTMLParser.STYLE_BODY = 32;
HTMLParser.ATTVALUE_VALUE = 33;
HTMLParser.ATTRIBUTE = 34;

HTMLParser.RULE_htmlDocument = 0;
HTMLParser.RULE_htmlElements = 1;
HTMLParser.RULE_htmlElement = 2;
HTMLParser.RULE_htmlContent = 3;
HTMLParser.RULE_htmlAttribute = 4;
HTMLParser.RULE_htmlScriptAttribute = 5;
HTMLParser.RULE_htmlStyleAttribute = 6;
HTMLParser.RULE_htmlAttributeName = 7;
HTMLParser.RULE_htmlScriptAttributeName = 8;
HTMLParser.RULE_htmlStyleAttributeName = 9;
HTMLParser.RULE_htmlAttributeValue = 10;
HTMLParser.RULE_htmlTagName = 11;
HTMLParser.RULE_htmlChardata = 12;
HTMLParser.RULE_htmlMisc = 13;
HTMLParser.RULE_htmlComment = 14;
HTMLParser.RULE_xhtmlCDATA = 15;
HTMLParser.RULE_dtd = 16;
HTMLParser.RULE_xml = 17;
HTMLParser.RULE_script = 18;
HTMLParser.RULE_style = 19;

function HtmlDocumentContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = HTMLParser.RULE_htmlDocument;
    return this;
}

HtmlDocumentContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
HtmlDocumentContext.prototype.constructor = HtmlDocumentContext;

HtmlDocumentContext.prototype.htmlComment = function(i) {
    if(i===undefined) {
        i = null;
    }
    if(i===null) {
        return this.getTypedRuleContexts(HtmlCommentContext);
    } else {
        return this.getTypedRuleContext(HtmlCommentContext,i);
    }
};

HtmlDocumentContext.prototype.htmlChardata = function(i) {
    if(i===undefined) {
        i = null;
    }
    if(i===null) {
        return this.getTypedRuleContexts(HtmlChardataContext);
    } else {
        return this.getTypedRuleContext(HtmlChardataContext,i);
    }
};

HtmlDocumentContext.prototype.dtd = function() {
    return this.getTypedRuleContext(DtdContext,0);
};

HtmlDocumentContext.prototype.htmlElements = function(i) {
    if(i===undefined) {
        i = null;
    }
    if(i===null) {
        return this.getTypedRuleContexts(HtmlElementsContext);
    } else {
        return this.getTypedRuleContext(HtmlElementsContext,i);
    }
};

HtmlDocumentContext.prototype.enterRule = function(listener) {
    if(listener instanceof HTMLParserListener ) {
        listener.enterHtmlDocument(this);
	}
};

HtmlDocumentContext.prototype.exitRule = function(listener) {
    if(listener instanceof HTMLParserListener ) {
        listener.exitHtmlDocument(this);
	}
};




HTMLParser.HtmlDocumentContext = HtmlDocumentContext;

HTMLParser.prototype.htmlDocument = function() {

    var localctx = new HtmlDocumentContext(this, this._ctx, this.state);
    this.enterRule(localctx, 0, HTMLParser.RULE_htmlDocument);
    var _la = 0; // Token type
    try {
        this.enterOuterAlt(localctx, 1);
        this.state = 44;
        this._errHandler.sync(this);
        var _alt = this._interp.adaptivePredict(this._input,1,this._ctx)
        while(_alt!=2 && _alt!=antlr4.atn.ATN.INVALID_ALT_NUMBER) {
            if(_alt===1) {
                this.state = 42;
                this._errHandler.sync(this);
                switch(this._input.LA(1)) {
                case HTMLParser.HTML_COMMENT:
                case HTMLParser.HTML_CONDITIONAL_COMMENT:
                    this.state = 40;
                    this.htmlComment();
                    break;
                case HTMLParser.SEA_WS:
                case HTMLParser.HTML_TEXT:
                    this.state = 41;
                    this.htmlChardata();
                    break;
                default:
                    throw new antlr4.error.NoViableAltException(this);
                } 
            }
            this.state = 46;
            this._errHandler.sync(this);
            _alt = this._interp.adaptivePredict(this._input,1,this._ctx);
        }

        this.state = 48;
        this._errHandler.sync(this);
        _la = this._input.LA(1);
        if(_la===HTMLParser.DTD) {
            this.state = 47;
            this.dtd();
        }

        this.state = 54;
        this._errHandler.sync(this);
        var _alt = this._interp.adaptivePredict(this._input,4,this._ctx)
        while(_alt!=2 && _alt!=antlr4.atn.ATN.INVALID_ALT_NUMBER) {
            if(_alt===1) {
                this.state = 52;
                this._errHandler.sync(this);
                switch(this._input.LA(1)) {
                case HTMLParser.HTML_COMMENT:
                case HTMLParser.HTML_CONDITIONAL_COMMENT:
                    this.state = 50;
                    this.htmlComment();
                    break;
                case HTMLParser.SEA_WS:
                case HTMLParser.HTML_TEXT:
                    this.state = 51;
                    this.htmlChardata();
                    break;
                default:
                    throw new antlr4.error.NoViableAltException(this);
                } 
            }
            this.state = 56;
            this._errHandler.sync(this);
            _alt = this._interp.adaptivePredict(this._input,4,this._ctx);
        }

        this.state = 60;
        this._errHandler.sync(this);
        _la = this._input.LA(1);
        while((((_la) & ~0x1f) == 0 && ((1 << _la) & ((1 << HTMLParser.HTML_COMMENT) | (1 << HTMLParser.HTML_CONDITIONAL_COMMENT) | (1 << HTMLParser.SEA_WS) | (1 << HTMLParser.SCRIPT_OPEN) | (1 << HTMLParser.SCRIPT_NOATTRS) | (1 << HTMLParser.STYLE_OPEN) | (1 << HTMLParser.STYLE_NOATTRS) | (1 << HTMLParser.TAG_OPEN))) !== 0)) {
            this.state = 57;
            this.htmlElements();
            this.state = 62;
            this._errHandler.sync(this);
            _la = this._input.LA(1);
        }
    } catch (re) {
    	if(re instanceof antlr4.error.RecognitionException) {
	        localctx.exception = re;
	        this._errHandler.reportError(this, re);
	        this._errHandler.recover(this, re);
	    } else {
	    	throw re;
	    }
    } finally {
        this.exitRule();
    }
    return localctx;
};

function HtmlElementsContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = HTMLParser.RULE_htmlElements;
    return this;
}

HtmlElementsContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
HtmlElementsContext.prototype.constructor = HtmlElementsContext;

HtmlElementsContext.prototype.htmlElement = function() {
    return this.getTypedRuleContext(HtmlElementContext,0);
};

HtmlElementsContext.prototype.htmlMisc = function(i) {
    if(i===undefined) {
        i = null;
    }
    if(i===null) {
        return this.getTypedRuleContexts(HtmlMiscContext);
    } else {
        return this.getTypedRuleContext(HtmlMiscContext,i);
    }
};

HtmlElementsContext.prototype.enterRule = function(listener) {
    if(listener instanceof HTMLParserListener ) {
        listener.enterHtmlElements(this);
	}
};

HtmlElementsContext.prototype.exitRule = function(listener) {
    if(listener instanceof HTMLParserListener ) {
        listener.exitHtmlElements(this);
	}
};




HTMLParser.HtmlElementsContext = HtmlElementsContext;

HTMLParser.prototype.htmlElements = function() {

    var localctx = new HtmlElementsContext(this, this._ctx, this.state);
    this.enterRule(localctx, 2, HTMLParser.RULE_htmlElements);
    var _la = 0; // Token type
    try {
        this.enterOuterAlt(localctx, 1);
        this.state = 66;
        this._errHandler.sync(this);
        _la = this._input.LA(1);
        while((((_la) & ~0x1f) == 0 && ((1 << _la) & ((1 << HTMLParser.HTML_COMMENT) | (1 << HTMLParser.HTML_CONDITIONAL_COMMENT) | (1 << HTMLParser.SEA_WS))) !== 0)) {
            this.state = 63;
            this.htmlMisc();
            this.state = 68;
            this._errHandler.sync(this);
            _la = this._input.LA(1);
        }
        this.state = 69;
        this.htmlElement();
        this.state = 73;
        this._errHandler.sync(this);
        var _alt = this._interp.adaptivePredict(this._input,7,this._ctx)
        while(_alt!=2 && _alt!=antlr4.atn.ATN.INVALID_ALT_NUMBER) {
            if(_alt===1) {
                this.state = 70;
                this.htmlMisc(); 
            }
            this.state = 75;
            this._errHandler.sync(this);
            _alt = this._interp.adaptivePredict(this._input,7,this._ctx);
        }

    } catch (re) {
    	if(re instanceof antlr4.error.RecognitionException) {
	        localctx.exception = re;
	        this._errHandler.reportError(this, re);
	        this._errHandler.recover(this, re);
	    } else {
	    	throw re;
	    }
    } finally {
        this.exitRule();
    }
    return localctx;
};

function HtmlElementContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = HTMLParser.RULE_htmlElement;
    return this;
}

HtmlElementContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
HtmlElementContext.prototype.constructor = HtmlElementContext;

HtmlElementContext.prototype.script = function() {
    return this.getTypedRuleContext(ScriptContext,0);
};

HtmlElementContext.prototype.TAG_OPEN = function(i) {
	if(i===undefined) {
		i = null;
	}
    if(i===null) {
        return this.getTokens(HTMLParser.TAG_OPEN);
    } else {
        return this.getToken(HTMLParser.TAG_OPEN, i);
    }
};


HtmlElementContext.prototype.htmlTagName = function(i) {
    if(i===undefined) {
        i = null;
    }
    if(i===null) {
        return this.getTypedRuleContexts(HtmlTagNameContext);
    } else {
        return this.getTypedRuleContext(HtmlTagNameContext,i);
    }
};

HtmlElementContext.prototype.TAG_CLOSE = function(i) {
	if(i===undefined) {
		i = null;
	}
    if(i===null) {
        return this.getTokens(HTMLParser.TAG_CLOSE);
    } else {
        return this.getToken(HTMLParser.TAG_CLOSE, i);
    }
};


HtmlElementContext.prototype.htmlContent = function() {
    return this.getTypedRuleContext(HtmlContentContext,0);
};

HtmlElementContext.prototype.TAG_SLASH = function() {
    return this.getToken(HTMLParser.TAG_SLASH, 0);
};

HtmlElementContext.prototype.htmlAttribute = function(i) {
    if(i===undefined) {
        i = null;
    }
    if(i===null) {
        return this.getTypedRuleContexts(HtmlAttributeContext);
    } else {
        return this.getTypedRuleContext(HtmlAttributeContext,i);
    }
};

HtmlElementContext.prototype.TAG_SLASH_CLOSE = function() {
    return this.getToken(HTMLParser.TAG_SLASH_CLOSE, 0);
};

HtmlElementContext.prototype.style = function() {
    return this.getTypedRuleContext(StyleContext,0);
};

HtmlElementContext.prototype.enterRule = function(listener) {
    if(listener instanceof HTMLParserListener ) {
        listener.enterHtmlElement(this);
	}
};

HtmlElementContext.prototype.exitRule = function(listener) {
    if(listener instanceof HTMLParserListener ) {
        listener.exitHtmlElement(this);
	}
};




HTMLParser.HtmlElementContext = HtmlElementContext;

HTMLParser.prototype.htmlElement = function() {

    var localctx = new HtmlElementContext(this, this._ctx, this.state);
    this.enterRule(localctx, 4, HTMLParser.RULE_htmlElement);
    var _la = 0; // Token type
    try {
        this.state = 113;
        this._errHandler.sync(this);
        var la_ = this._interp.adaptivePredict(this._input,11,this._ctx);
        switch(la_) {
        case 1:
            this.enterOuterAlt(localctx, 1);
            this.state = 76;
            this.script();
            break;

        case 2:
            this.enterOuterAlt(localctx, 2);
            this.state = 77;
            this.match(HTMLParser.TAG_OPEN);
            this.state = 78;
            this.htmlTagName();
            this.state = 82;
            this._errHandler.sync(this);
            _la = this._input.LA(1);
            while(_la===HTMLParser.TAG_NAME) {
                this.state = 79;
                this.htmlAttribute();
                this.state = 84;
                this._errHandler.sync(this);
                _la = this._input.LA(1);
            }
            this.state = 85;
            this.match(HTMLParser.TAG_CLOSE);
            this.state = 86;
            this.htmlContent();
            this.state = 87;
            this.match(HTMLParser.TAG_OPEN);
            this.state = 88;
            this.match(HTMLParser.TAG_SLASH);
            this.state = 89;
            this.htmlTagName();
            this.state = 90;
            this.match(HTMLParser.TAG_CLOSE);
            break;

        case 3:
            this.enterOuterAlt(localctx, 3);
            this.state = 92;
            this.match(HTMLParser.TAG_OPEN);
            this.state = 93;
            this.htmlTagName();
            this.state = 97;
            this._errHandler.sync(this);
            _la = this._input.LA(1);
            while(_la===HTMLParser.TAG_NAME) {
                this.state = 94;
                this.htmlAttribute();
                this.state = 99;
                this._errHandler.sync(this);
                _la = this._input.LA(1);
            }
            this.state = 100;
            this.match(HTMLParser.TAG_SLASH_CLOSE);
            break;

        case 4:
            this.enterOuterAlt(localctx, 4);
            this.state = 102;
            this.match(HTMLParser.TAG_OPEN);
            this.state = 103;
            this.htmlTagName();
            this.state = 107;
            this._errHandler.sync(this);
            _la = this._input.LA(1);
            while(_la===HTMLParser.TAG_NAME) {
                this.state = 104;
                this.htmlAttribute();
                this.state = 109;
                this._errHandler.sync(this);
                _la = this._input.LA(1);
            }
            this.state = 110;
            this.match(HTMLParser.TAG_CLOSE);
            break;

        case 5:
            this.enterOuterAlt(localctx, 5);
            this.state = 112;
            this.style();
            break;

        }
    } catch (re) {
    	if(re instanceof antlr4.error.RecognitionException) {
	        localctx.exception = re;
	        this._errHandler.reportError(this, re);
	        this._errHandler.recover(this, re);
	    } else {
	    	throw re;
	    }
    } finally {
        this.exitRule();
    }
    return localctx;
};

function HtmlContentContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = HTMLParser.RULE_htmlContent;
    return this;
}

HtmlContentContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
HtmlContentContext.prototype.constructor = HtmlContentContext;

HtmlContentContext.prototype.htmlChardata = function(i) {
    if(i===undefined) {
        i = null;
    }
    if(i===null) {
        return this.getTypedRuleContexts(HtmlChardataContext);
    } else {
        return this.getTypedRuleContext(HtmlChardataContext,i);
    }
};

HtmlContentContext.prototype.htmlElement = function(i) {
    if(i===undefined) {
        i = null;
    }
    if(i===null) {
        return this.getTypedRuleContexts(HtmlElementContext);
    } else {
        return this.getTypedRuleContext(HtmlElementContext,i);
    }
};

HtmlContentContext.prototype.xhtmlCDATA = function(i) {
    if(i===undefined) {
        i = null;
    }
    if(i===null) {
        return this.getTypedRuleContexts(XhtmlCDATAContext);
    } else {
        return this.getTypedRuleContext(XhtmlCDATAContext,i);
    }
};

HtmlContentContext.prototype.htmlComment = function(i) {
    if(i===undefined) {
        i = null;
    }
    if(i===null) {
        return this.getTypedRuleContexts(HtmlCommentContext);
    } else {
        return this.getTypedRuleContext(HtmlCommentContext,i);
    }
};

HtmlContentContext.prototype.enterRule = function(listener) {
    if(listener instanceof HTMLParserListener ) {
        listener.enterHtmlContent(this);
	}
};

HtmlContentContext.prototype.exitRule = function(listener) {
    if(listener instanceof HTMLParserListener ) {
        listener.exitHtmlContent(this);
	}
};




HTMLParser.HtmlContentContext = HtmlContentContext;

HTMLParser.prototype.htmlContent = function() {

    var localctx = new HtmlContentContext(this, this._ctx, this.state);
    this.enterRule(localctx, 6, HTMLParser.RULE_htmlContent);
    var _la = 0; // Token type
    try {
        this.enterOuterAlt(localctx, 1);
        this.state = 116;
        this._errHandler.sync(this);
        _la = this._input.LA(1);
        if(_la===HTMLParser.SEA_WS || _la===HTMLParser.HTML_TEXT) {
            this.state = 115;
            this.htmlChardata();
        }

        this.state = 128;
        this._errHandler.sync(this);
        var _alt = this._interp.adaptivePredict(this._input,15,this._ctx)
        while(_alt!=2 && _alt!=antlr4.atn.ATN.INVALID_ALT_NUMBER) {
            if(_alt===1) {
                this.state = 121;
                this._errHandler.sync(this);
                switch(this._input.LA(1)) {
                case HTMLParser.SCRIPT_OPEN:
                case HTMLParser.SCRIPT_NOATTRS:
                case HTMLParser.STYLE_OPEN:
                case HTMLParser.STYLE_NOATTRS:
                case HTMLParser.TAG_OPEN:
                    this.state = 118;
                    this.htmlElement();
                    break;
                case HTMLParser.CDATA:
                    this.state = 119;
                    this.xhtmlCDATA();
                    break;
                case HTMLParser.HTML_COMMENT:
                case HTMLParser.HTML_CONDITIONAL_COMMENT:
                    this.state = 120;
                    this.htmlComment();
                    break;
                default:
                    throw new antlr4.error.NoViableAltException(this);
                }
                this.state = 124;
                this._errHandler.sync(this);
                _la = this._input.LA(1);
                if(_la===HTMLParser.SEA_WS || _la===HTMLParser.HTML_TEXT) {
                    this.state = 123;
                    this.htmlChardata();
                }
         
            }
            this.state = 130;
            this._errHandler.sync(this);
            _alt = this._interp.adaptivePredict(this._input,15,this._ctx);
        }

    } catch (re) {
    	if(re instanceof antlr4.error.RecognitionException) {
	        localctx.exception = re;
	        this._errHandler.reportError(this, re);
	        this._errHandler.recover(this, re);
	    } else {
	    	throw re;
	    }
    } finally {
        this.exitRule();
    }
    return localctx;
};

function HtmlAttributeContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = HTMLParser.RULE_htmlAttribute;
    return this;
}

HtmlAttributeContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
HtmlAttributeContext.prototype.constructor = HtmlAttributeContext;

HtmlAttributeContext.prototype.htmlAttributeName = function() {
    return this.getTypedRuleContext(HtmlAttributeNameContext,0);
};

HtmlAttributeContext.prototype.TAG_EQUALS = function() {
    return this.getToken(HTMLParser.TAG_EQUALS, 0);
};

HtmlAttributeContext.prototype.htmlAttributeValue = function() {
    return this.getTypedRuleContext(HtmlAttributeValueContext,0);
};

HtmlAttributeContext.prototype.enterRule = function(listener) {
    if(listener instanceof HTMLParserListener ) {
        listener.enterHtmlAttribute(this);
	}
};

HtmlAttributeContext.prototype.exitRule = function(listener) {
    if(listener instanceof HTMLParserListener ) {
        listener.exitHtmlAttribute(this);
	}
};




HTMLParser.HtmlAttributeContext = HtmlAttributeContext;

HTMLParser.prototype.htmlAttribute = function() {

    var localctx = new HtmlAttributeContext(this, this._ctx, this.state);
    this.enterRule(localctx, 8, HTMLParser.RULE_htmlAttribute);
    try {
        this.state = 136;
        this._errHandler.sync(this);
        var la_ = this._interp.adaptivePredict(this._input,16,this._ctx);
        switch(la_) {
        case 1:
            this.enterOuterAlt(localctx, 1);
            this.state = 131;
            this.htmlAttributeName();
            this.state = 132;
            this.match(HTMLParser.TAG_EQUALS);
            this.state = 133;
            this.htmlAttributeValue();
            break;

        case 2:
            this.enterOuterAlt(localctx, 2);
            this.state = 135;
            this.htmlAttributeName();
            break;

        }
    } catch (re) {
    	if(re instanceof antlr4.error.RecognitionException) {
	        localctx.exception = re;
	        this._errHandler.reportError(this, re);
	        this._errHandler.recover(this, re);
	    } else {
	    	throw re;
	    }
    } finally {
        this.exitRule();
    }
    return localctx;
};

function HtmlScriptAttributeContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = HTMLParser.RULE_htmlScriptAttribute;
    return this;
}

HtmlScriptAttributeContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
HtmlScriptAttributeContext.prototype.constructor = HtmlScriptAttributeContext;

HtmlScriptAttributeContext.prototype.htmlScriptAttributeName = function() {
    return this.getTypedRuleContext(HtmlScriptAttributeNameContext,0);
};

HtmlScriptAttributeContext.prototype.SCRIPT_TAG_EQUALS = function() {
    return this.getToken(HTMLParser.SCRIPT_TAG_EQUALS, 0);
};

HtmlScriptAttributeContext.prototype.htmlAttributeValue = function() {
    return this.getTypedRuleContext(HtmlAttributeValueContext,0);
};

HtmlScriptAttributeContext.prototype.enterRule = function(listener) {
    if(listener instanceof HTMLParserListener ) {
        listener.enterHtmlScriptAttribute(this);
	}
};

HtmlScriptAttributeContext.prototype.exitRule = function(listener) {
    if(listener instanceof HTMLParserListener ) {
        listener.exitHtmlScriptAttribute(this);
	}
};




HTMLParser.HtmlScriptAttributeContext = HtmlScriptAttributeContext;

HTMLParser.prototype.htmlScriptAttribute = function() {

    var localctx = new HtmlScriptAttributeContext(this, this._ctx, this.state);
    this.enterRule(localctx, 10, HTMLParser.RULE_htmlScriptAttribute);
    try {
        this.state = 143;
        this._errHandler.sync(this);
        var la_ = this._interp.adaptivePredict(this._input,17,this._ctx);
        switch(la_) {
        case 1:
            this.enterOuterAlt(localctx, 1);
            this.state = 138;
            this.htmlScriptAttributeName();
            this.state = 139;
            this.match(HTMLParser.SCRIPT_TAG_EQUALS);
            this.state = 140;
            this.htmlAttributeValue();
            break;

        case 2:
            this.enterOuterAlt(localctx, 2);
            this.state = 142;
            this.htmlScriptAttributeName();
            break;

        }
    } catch (re) {
    	if(re instanceof antlr4.error.RecognitionException) {
	        localctx.exception = re;
	        this._errHandler.reportError(this, re);
	        this._errHandler.recover(this, re);
	    } else {
	    	throw re;
	    }
    } finally {
        this.exitRule();
    }
    return localctx;
};

function HtmlStyleAttributeContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = HTMLParser.RULE_htmlStyleAttribute;
    return this;
}

HtmlStyleAttributeContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
HtmlStyleAttributeContext.prototype.constructor = HtmlStyleAttributeContext;

HtmlStyleAttributeContext.prototype.htmlStyleAttributeName = function() {
    return this.getTypedRuleContext(HtmlStyleAttributeNameContext,0);
};

HtmlStyleAttributeContext.prototype.STYLE_TAG_EQUALS = function() {
    return this.getToken(HTMLParser.STYLE_TAG_EQUALS, 0);
};

HtmlStyleAttributeContext.prototype.htmlAttributeValue = function() {
    return this.getTypedRuleContext(HtmlAttributeValueContext,0);
};

HtmlStyleAttributeContext.prototype.enterRule = function(listener) {
    if(listener instanceof HTMLParserListener ) {
        listener.enterHtmlStyleAttribute(this);
	}
};

HtmlStyleAttributeContext.prototype.exitRule = function(listener) {
    if(listener instanceof HTMLParserListener ) {
        listener.exitHtmlStyleAttribute(this);
	}
};




HTMLParser.HtmlStyleAttributeContext = HtmlStyleAttributeContext;

HTMLParser.prototype.htmlStyleAttribute = function() {
